# plover_melani

./: MANIFEST.in  README.md  setup.cfg  setup.py
plover_melani/: system.py  theory.py
plover_melani/dictionaries/: melani_main.json  melani_orthography.json  melani_orthography.py
plover_melani/scripts/: sortdict.py  testortho.py  voc2json.py
test/: test_blackbox.py  test_theory.py
