[metadata]
name = plover_melani
version = 0.5.9
description = Melani (Italian system) support for Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = Benoit Pierre
author_email = benoit.pierre@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/benoit-pierre/plover_melani
project_urls =
	Source Code = https://github.com/benoit-pierre/plover_melani
	Issue Tracker = https://github.com/benoit-pierre/plover_melani/issues
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
keywords = plover plover_plugin

[options]
zip_safe = True
python_requires = >=3.6
install_requires =
	plover>=4.0.0.dev9
	plover_stroke>=0.4.0
	plover_python_dictionary>=0.5.6
include_package_data = True
packages =
	plover_melani
	plover_melani.scripts

[options.extras_require]
test =
	plover>=4.0.0.dev9
	pytest>=3.0.1

[options.entry_points]
console_scripts =
	melani_testortho = plover_melani.scripts.testortho:run
	melani_voc2json = plover_melani.scripts.voc2json:run
	melani_sortdict = plover_melani.scripts.sortdict:run
plover.system =
	Melani = plover_melani.system

# vim: commentstring=#\ %s list
